theme.ini updated

--- a/theme.ini
+++ b/theme.ini
@@ -2,7 +2,7 @@
 ; Theme Settings
 ;;;;;;;
 [theme]
-author = "Omeka Team modified by gl"
+author = "Omeka Team modified by Gilles Lengy for ARTABAN"
 title = "BerlinBABEL"
 description = "TEST BABEL Abstraction of the Making the History of 1989 theme."
 license = "GPLv3"
@@ -10,4 +10,4 @@ website = "https://omeka.org"
 support_link = "https://artaban.fr"
 omeka_minimum_version="3.0"
 omeka_target_version="3.0"
-version="2.7.2"
+version="1.0.0"
