theme.ini updated

--- a/theme.ini
+++ b/theme.ini
@@ -3,8 +3,8 @@
 ;;;;;;;
 [theme]
 author = "Omeka Team modified by Gilles Lengy for ARTABAN"
-title = "BerlinBABEL"
-description = "TEST BABEL Abstraction of the Making the History of 1989 theme."
+title = "BerlinBABELA"
+description = "TEST BABELA Abstraction of the Making the History of 1989 theme."
 license = "GPLv3"
 website = "https://omeka.org"
 support_link = "https://artaban.fr"
